Name:                   hfuse-experiments
Version:                0.0.0.1
License:                BSD3
Author:                 siers
Description:            hfuse experiments
Homepage:               https://github.com/siers/hfuse-experiments
Category:               System
Stability:              Experimental
Cabal-Version:          >= 1.10
Build-Type:             Simple

executable MemoryFS
  build-depends:
      base >= 4 && < 5
    , HFuse
    , unix
    , bytestring
    , text
    , directory-tree
    , path
  main-is: MemoryFS.hs
  hs-source-dirs: memory
  ghc-options: -threaded
  Default-Language: Haskell2010

executable Files
  build-depends:
      base >= 4 && < 5
    , unix
    , bytestring
    , text
    , directory-tree
    , path
    , containers
    , directory
    , filepath
    , recursion-schemes
    , pretty-simple
  main-is: Main.hs
  hs-source-dirs: files
  ghc-options: -threaded
  Default-Language: Haskell2010
